# native-obfuscator

obfuscator/src/main/java/by/radioegor146/: NativeObfuscator.java
obfuscator/src/main/java/by/radioegor146/bytecode/: IndyPreprocessor.java
obfuscator/src/main/java/by/radioegor146/compiletime/: LoaderUnpack.java
obfuscator/src/main/resources/sources/: CMakeLists.txt
python/: encrypt_zip.py
