cmake_minimum_required(VERSION 3.8)
project($projectname)
set(CMAKE_CXX_STANDARD 17)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY build/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY build/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY build/lib)

if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
    if (CMAKE_CXX_COMPILER_VERSION VERSION_LESS 6.0)
        message(FATAL_ERROR "GCC version must be at least 6.0!")
    endif()
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2 -s -DNDEBUG")
elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY build/lib)
    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG build/lib)
    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE build/lib)
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY build/lib)
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG build/lib)
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE build/lib)
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MP8 /wd4102 /wd4101 /EHsc")
elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "AppleClang")
else()
    message(AUTHOR_WARNING "You are using an unsupported compiler! Compilation has only been tested with MSVC, GNU, Clang and AppleClang.")
endif()

find_package(JNI REQUIRED)
include_directories(${JNI_INCLUDE_DIRS})

if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
    set(NATIVE_OS "linux")
elseif(CMAKE_SYSTEM_NAME STREQUAL "Windows")
    set(NATIVE_OS "windows")
elseif(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
    set(NATIVE_OS "macos")
else()
    set(NATIVE_OS "raw${CMAKE_SYSTEM_NAME}")
endif()

string(TOLOWER "${CMAKE_SYSTEM_PROCESSOR}" _arch_lower)
if(_arch_lower MATCHES "^(x86_64|amd64)")
    set(NATIVE_ARCH "x64")
elseif(_arch_lower MATCHES "^(aarch64|arm64)")
    set(NATIVE_ARCH "arm64")
elseif(_arch_lower MATCHES "^arm")
    set(NATIVE_ARCH "arm32")
elseif(_arch_lower MATCHES "^(i[3-6]86|x86)$")
    set(NATIVE_ARCH "x86")
else()
    set(NATIVE_ARCH "raw${CMAKE_SYSTEM_PROCESSOR}")
endif()
set(CLASS_FILES $classfiles)
set(MAIN_FILES $mainfiles)
add_definitions($definitions)

add_library($projectname SHARED ${CLASS_FILES} ${MAIN_FILES})

set_target_properties($projectname PROPERTIES
    PREFIX ""
    OUTPUT_NAME "${NATIVE_ARCH}-${NATIVE_OS}"
)

message(STATUS "Target platform : ${NATIVE_OS}")
message(STATUS "Target arch     : ${NATIVE_ARCH}")
message(STATUS "Output filename : ${NATIVE_ARCH}-${NATIVE_OS}${CMAKE_SHARED_LIBRARY_SUFFIX}")